--- a/clients/src/components/multi-choices/question/Question.scss
+++ b/clients/src/components/multi-choices/question/Question.scss
@@ -5,7 +5,7 @@ $question-content-background: white;
 $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 
 .question {
-    height: 12vh;
+    height: 12%;
     background-color: $question-content-background;
     box-shadow: $box-shadow;
     z-index: 1;
@@ -41,54 +41,60 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
     }
 }
 
-.question-embed {
-    width: 100%;
-    height: 45vh;
-    z-index: 1;
-
-    img {
-        height: 95%;
-        margin: $gap;
-    }
-}
-
-.question-embed-edit {
+.embeded {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    z-index: 20;
-    position: relative;
-    bottom: 0px;
-    left: 0px;
+    margin: $gap;
 
-    > * {
-        border-radius: $gap/2;
-        margin: 0 $gap/2;
+    .question-embed {
+        width: 100%;
+        height: 45%;
+        z-index: 1;
+
+        img {
+            height: 45vh;
+            margin: $gap;
+        }
     }
 
-    button {
-        box-shadow: none;
-        align-items: center;
-        width: 75px;
-        height: 34px;
-        padding: 0px;
-        font-size: 16px;
-        font-weight: bold;
-        cursor: pointer;
-        border: none;
-        background-color: transparent;
-        color: white;
-    }
+    .question-embed-edit {
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        z-index: 20;
+        position: relative;
+        width: 10%;
+        bottom: 0px;
+        left: 0px;
 
-    .question-embed-change {
-        background-color: #feca57;
-    }
+        >* {
+            border-radius: $gap/2;
+            margin: $gap/2;
+        }
 
-    .question-embed-remove {
-        background-color: #ff6b6b;
+        button {
+            box-shadow: none;
+            align-items: center;
+            width: 75px;
+            height: 34px;
+            padding: 0px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            border: none;
+            background-color: transparent;
+            color: white;
+        }
+
+        .question-embed-change {
+            background-color: #feca57;
+        }
+
+        .question-embed-remove {
+            background-color: #ff6b6b;
+        }
     }
 }
 
 .question-answers {
-    height: 28vh;
+    height: 28%;
 }
