--- a/clients/src/components/multi-choices/panelPreview/PanelPreview.scss
+++ b/clients/src/components/multi-choices/panelPreview/PanelPreview.scss
@@ -63,19 +63,11 @@
         padding-left: $gap;
         padding-right: $gap*2;
         padding-top: $gap;
-
-        .add-question {
-            display: block;
-            width: 100%;
-            height: 50px;
-            border: none;
-            background-color: #04AA6D;
-            color: white;
+        display: flex;
+        > * {
+            width: 50%;
+            margin: 0 3px;
             font-weight: bold;
-            padding: 4px 15px;
-            font-size: 14px;
-            cursor: pointer;
-            text-transform: uppercase;
         }
     }
 }
