--- a/clients/src/components/multi-choices/question/Question.scss
+++ b/clients/src/components/multi-choices/question/Question.scss
@@ -44,6 +44,7 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 .embeded {
     display: flex;
     margin: $gap;
+    height: 54%;
 
     .question-embed {
         width: 100%;
