design modal create contest

--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600');
+@import url('https://fonts.googleapis.com/css2?family=Sigmar+One:wght@400;600');
 
 $gap: 10px;
 $quick-action-height: 5vh;
