--- a/clients/src/components/common/image/Image.scss
+++ b/clients/src/components/common/image/Image.scss
@@ -7,6 +7,6 @@
 }
 
 .selected {
-    height: 145px;
-    background-color: goldenrod;
+    height: 148px;
+    border: 5px solid rgba(30, 96, 218, 0.76);
 }
