--- a/clients/src/components/contestManagement/modalCreateContest/ModalCreateContest.scss
+++ b/clients/src/components/contestManagement/modalCreateContest/ModalCreateContest.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
 
-    > * {
+    >* {
         margin: 0 $gap;
         width: 50%;
     }
@@ -14,6 +14,15 @@
         margin: 3px 0;
     }
 
+    .body-left {
+        .datetime-picker {
+            .datetime {
+                display: flex;
+                flex-direction: row;
+            }
+        }
+    }
+
     .body-right {
         display: flex;
         flex-direction: column;
@@ -21,7 +30,7 @@
 
         .display-image {
             img {
-                height: 240px;
+                height: 250px;
             }
         }
 
