--- a/clients/src/components/contestManagement/contestInfo/ContestInfo.scss
+++ b/clients/src/components/contestManagement/contestInfo/ContestInfo.scss
@@ -23,6 +23,55 @@
 
         .list-tests {
             width: 78vw;
+            margin: $gap $gap $gap 0;
+            border-radius: $gap/2;
+
+            .card {
+                width: 100%;
+
+                .card-body {
+                    width: 100%;
+                }
+            }
+
+            .show-all-tests {
+                height: 75vh;
+                overflow-y: auto;
+
+                .card-body {
+                    padding: $gap 1rem;
+                }
+
+                .card-test-preview {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    border: 1px solid;
+                    border-radius: $gap/2;
+                    margin: 0 $gap;
+
+                    .card-test-info {
+
+                        .card-test-description {
+                            font-style: italic;
+                        }
+
+                        .detail {}
+                    }
+
+                    .card-test-actions {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+
+                        button {
+                            margin: $gap/2;
+                            font-weight: bold;
+                            min-width: 90px;
+                        }
+                    }
+                }
+            }
         }
 
         .contest-show-info {
@@ -35,7 +84,7 @@
 
                 .card-img-top {
                     margin: $gap;
-                    height: 40vh;
+                    height: 30vh;
                     width: auto;
                     max-width: 100%;
                     display: flex;
@@ -45,6 +94,8 @@
                 .card-body {
                     .card-text {
                         margin-bottom: 0.4rem;
+                        max-height: 12vh;
+                        overflow-y: auto;
                     }
                 }
             }
