--- a/clients/src/components/contestManagement/contest/Contest.scss
+++ b/clients/src/components/contestManagement/contest/Contest.scss
@@ -8,15 +8,14 @@
         -webkit-box-align: center;
         align-items: center;
         -webkit-box-pack: justify;
-        justify-content: space-between;
+        //justify-content: space-between;
         width: 100%;
         padding: $gap;
 
         .heading-contest {
             font-weight: bold;
             text-transform: uppercase;
-            background-color: goldenrod;
-            color: white;
+            text-align: center;
         }
 
         .create-contest {
