--- a/clients/src/components/multi-choices/panelSettings/PanelSettings.scss
+++ b/clients/src/components/multi-choices/panelSettings/PanelSettings.scss
@@ -6,6 +6,7 @@ $question-attribute-setting-height: 80px;
     width: 23vw;
     padding: 10px;
     background-color: $bg-color;
+    font-size: 0px;
 
     .panel-right-title {
         background-color: goldenrod;
