--- a/clients/src/components/contestManagement/contestInfo/ContestInfo.scss
+++ b/clients/src/components/contestManagement/contestInfo/ContestInfo.scss
@@ -86,7 +86,7 @@
                         button {
                             margin: $gap/4;
                             font-weight: bold;
-                            min-width: 90px;
+                            //min-width: 90px;
                             color: white;
                         }
                     }
