add table to statistics page

--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600');
 @import url('https://fonts.googleapis.com/css2?family=Sigmar+One:wght@400;600');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css');
 
 $gap: 10px;
 $quick-action-height: 5vh;
