--- a/clients/src/components/contestManagement/contestInfo/ContestInfo.scss
+++ b/clients/src/components/contestManagement/contestInfo/ContestInfo.scss
@@ -72,6 +72,7 @@
                     }
 
                     .card-test-info {
+                        padding: $gap 0 $gap 0 !important;
 
                         .card-test-description {
                             font-style: italic;
