--- a/clients/src/components/common/select/Select.scss
+++ b/clients/src/components/common/select/Select.scss
@@ -1,6 +1,6 @@
 @import '_setting.scss';
 
-$select-color: rgb(11, 9, 126);
+$select-color: rgba(53, 94, 2, 1);
 $select-background: #F8EFBA;
 $select-width: 100%;
 $select-height: 40px;
