--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600');
 @import url('https://fonts.googleapis.com/css2?family=Sigmar+One:wght@400;600');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap');
 
 $gap: 10px;
 $quick-action-height: 5vh;
 $panel-left-width: 16vw;
 $panel-center-width: 86vw;
-$box-shadow: rgba(0, 0, 0, 0.25) 0px -4px inset;
+$box-shadow: rgba(255, 255, 255, 0.25) 0px -4px inset;
 $bg-color: #ebecf0;
-$app-bg-color: rgba(215, 233, 248, 0.575);
+$app-bg-color: rgb(255, 255, 255);
 
 .remove-bootstrap-outline {
-
   textarea:focus,
   textarea.form-control:focus,
   input.form-control:focus,
@@ -39,4 +40,94 @@ $app-bg-color: rgba(215, 233, 248, 0.575);
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+:root{
+  // === COLOR ===
+  --mint:hsla(87, 90%, 34%, 1);
+  --strong-mint:hsla(87, 95%, 19%, 1);
+  --black:hsla(0, 0%, 0%, 1);
+  --container-color:#FFF;
+  --gray: rgb(119, 119, 119);
+  --white: #FFFFFF;
+  --light-mint:rgba(209, 255, 134, 0.92);
+
+  // === FONT WEIGHT
+  --font-medium: 500;
+  --font-semi-bold: 600;
+  --font-bold:700;
+  // === FONT
+  --logo-font: 'Nunito', sans-serif;
+  --body-font: "Source Sans Pro", sans-serif;
+  // === FONT SIZE
+  --big-font-size: 2rem;
+  --h1-font-size: 1.5rem;
+  --h2-font-size: 1.25rem;
+  --h3-font-size: 1rem;
+  --normal-font-size: .938rem;
+  --small-font-size: .813rem;
+  --smaller-font-size: .75rem;
+
+  // ==== 
+  --header-height: 3.5rem;
+
+  // ==== z index
+  --z-tooltip: 10;
+  --z-fixed: 100;  
+
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  width: 100%;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+.container{
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0   10px; 
+}
+
+button {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size:1rem ;
+  font-family: var(--logo-font);
+  box-shadow: none !important;
+}
+
+.grid{
+  display: grid;
+}
+
+/*=============== SCROLL BAR ===============*/
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--mint); 
+  border-radius: 2px;
 }
