--- a/clients/src/components/contestManagement/statistics/StatisticTest.scss
+++ b/clients/src/components/contestManagement/statistics/StatisticTest.scss
@@ -30,4 +30,16 @@
     .mdb-datatable .row {
         margin: $gap;
     }
+
+    .data-table {
+        button {
+            box-shadow: none !important;
+            outline: none !important;
+            color: gray;
+        }
+
+        button:hover {
+            color: lightseagreen;
+        }
+    }
 }
