--- a/clients/src/components/multi-choices/question/Question.scss
+++ b/clients/src/components/multi-choices/question/Question.scss
@@ -4,99 +4,107 @@
 $question-content-background: white;
 $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 
-.question {
-    height: 12%;
-    background-color: $question-content-background;
-    box-shadow: $box-shadow;
-    z-index: 1;
-    margin: $gap $gap * 2 0 $gap*2;
-    border-radius: $gap;
-    line-height: 1.2rem;
-    display: flex;
-    flex-direction: row;
+.panel-center {
+    width: $panel-center-width;
 
-    .lenght-limit {
-        color: gray;
-        padding-right: $gap;
-        padding-top: $gap;
-        width: 50px;
-        font-size: 14px;
-        font-weight: normal;
-        vertical-align: middle;
+    >* {
+        font-weight: bold;
     }
 
-    .question-content {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        margin-left: $gap*3;
-
-        .textarea-enter {
-            font-size: 18px;
-            margin-bottom: 1rem;
-            font-weight: bold;
-            box-shadow: none !important;
-            outline: none !important;
-        }
-    }
-}
-
-.embeded {
-    display: flex;
-    margin: $gap;
-    height: 54%;
-    color: $app-bg-color;
-    font-size: 1px;
-
-    .question-embed {
-        width: 100%;
+    .question {
+        height: 12vh;
+        background-color: $question-content-background;
+        box-shadow: $box-shadow;
         z-index: 1;
-
-        img {
-            height: 45vh;
-            margin: $gap;
-        }
-    }
-
-    .question-embed-edit {
+        margin: $gap $gap * 2 0 $gap*2;
+        border-radius: $gap;
+        line-height: 1.2rem;
         display: flex;
-        flex-direction: column;
-        justify-content: end;
-        z-index: 20;
-        position: relative;
-        width: 10%;
-        bottom: 0px;
-        left: 0px;
-
-        >* {
-            border-radius: $gap/2;
-            margin: $gap/2;
+        flex-direction: row;
+    
+        .lenght-limit {
+            color: gray;
+            padding-right: $gap;
+            padding-top: $gap;
+            width: 50px;
+            font-size: 14px;
+            font-weight: normal;
+            vertical-align: middle;
         }
-
-        button {
-            box-shadow: none;
-            align-items: center;
-            width: 75px;
-            height: 34px;
-            padding: 0px;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            border: none;
-            background-color: transparent;
-            color: white;
-        }
-
-        .question-embed-change {
-            background-color: #feca57;
-        }
-
-        .question-embed-remove {
-            background-color: #ff6b6b;
+    
+        .question-content {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            margin-left: $gap*3;
+    
+            .textarea-enter {
+                font-size: 18px;
+                margin-bottom: 1rem;
+                font-weight: bold;
+                box-shadow: none !important;
+                outline: none !important;
+            }
         }
     }
-}
-
-.question-answers {
-    height: 28%;
+    
+    .embeded {
+        display: flex;
+        margin: $gap;
+        height: 47vh;
+        color: $app-bg-color;
+        font-size: 1px;
+    
+        .question-embed {
+            width: 100%;
+            z-index: 1;
+    
+            img {
+                height: 45vh;
+                margin: $gap;
+            }
+        }
+    
+        .question-embed-edit {
+            display: flex;
+            flex-direction: column;
+            justify-content: end;
+            z-index: 20;
+            position: relative;
+            width: 10%;
+            bottom: 0px;
+            left: 0px;
+    
+            >* {
+                border-radius: $gap/2;
+                margin: $gap/2;
+            }
+    
+            button {
+                box-shadow: none;
+                align-items: center;
+                width: 75px;
+                height: 34px;
+                padding: 0px;
+                font-size: 16px;
+                font-weight: bold;
+                cursor: pointer;
+                border: none;
+                background-color: transparent;
+                color: white;
+            }
+    
+            .question-embed-change {
+                background-color: #feca57;
+            }
+    
+            .question-embed-remove {
+                background-color: #ff6b6b;
+            }
+        }
+    }
+    
+    .question-answers {
+        height: 28vh;
+    }
 }
