fix bug ShareComponent

--- a/clients/src/components/multi-choices/question/Question.scss
+++ b/clients/src/components/multi-choices/question/Question.scss
@@ -68,7 +68,7 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         .question-embed-edit {
             display: flex;
             flex-direction: column;
-            justify-content: end;
+            justify-content: flex-end;
             z-index: 20;
             position: relative;
             width: 10%;
