--- a/clients/src/components/contestManagement/contest/Contest.scss
+++ b/clients/src/components/contestManagement/contest/Contest.scss
@@ -60,10 +60,9 @@
 
         .contest-action {
             >* {
-                margin: 0 $gap;
+                margin: 0 $gap/2;
                 font-weight: bold;
                 color: white;
-                width: 40%;
             }
         }
     }
