--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -11,9 +11,11 @@ $gap: 10px;
 $quick-action-height: 5vh;
 $panel-left-width: 16vw;
 $panel-center-width: 86vw;
+$navbar-height: 10vh;
 $box-shadow: rgba(255, 255, 255, 0.25) 0px -4px inset;
 $bg-color: #ebecf0;
 $app-bg-color: rgb(255, 255, 255);
+$border-color: #f5cd79;
 
 .remove-bootstrap-outline {
   textarea:focus,
