--- a/clients/src/components/common/navbar/Navbar.scss
+++ b/clients/src/components/common/navbar/Navbar.scss
@@ -2,7 +2,7 @@
 /*=============== HEADER ===============*/
 /*=============== NAV ===============*/
 .nav{
-    height: 100px;
+    height: $navbar-height;
     display: flex;
     justify-content: space-between;
     align-items: center;
