--- a/clients/src/components/common/home/Homepage.scss
+++ b/clients/src/components/common/home/Homepage.scss
@@ -65,7 +65,7 @@ img {
     }
 }
 
-.card {
+.card-info {
     width: 300px;
     height: 400px;
     border-radius: 10px;
@@ -143,7 +143,7 @@ h2 {
     box-sizing: border-box;
   }
   
-button {
+.button {
     width: 50%;
     align-self: center;
     color: var(--mint);
@@ -155,7 +155,7 @@ button {
     margin: 0;
     box-sizing: border-box;
   }
-button:hover {
+.button:hover {
     background-color: var(--mint);
     margin: 0;
     padding: 0;
