--- a/clients/src/components/multi-choices/answer/Answer.scss
+++ b/clients/src/components/multi-choices/answer/Answer.scss
@@ -88,7 +88,7 @@ $btn-check-size: 2rem;
     }
 
     .answer-B {
-        background-color: #2bcbba;
+        background-color: #7be9a9cb;
     }
 
     .answer-C {
