--- a/clients/src/components/multi-choices/panelPreview/PanelPreview.scss
+++ b/clients/src/components/multi-choices/panelPreview/PanelPreview.scss
@@ -6,7 +6,7 @@
 
     .questions-preview-title {
         text-transform: uppercase;
-        background-color: #cf972e;
+        background-color: $theme-color;
         color: white;
         font-weight: bold;
         height: 5vh;
