--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -6,6 +6,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap');
+@import "~bootstrap/scss/functions";
+@import '~bootstrap/scss/variables';
 
 $gap: 10px;
 $quick-action-height: 5vh;
@@ -15,7 +17,8 @@ $navbar-height: 10vh;
 $box-shadow: rgba(255, 255, 255, 0.25) 0px -4px inset;
 $bg-color: #ebecf0;
 $app-bg-color: rgb(255, 255, 255);
-$border-color: #f5cd79;
+$theme-color: hsla(87, 90%, 34%, 1);
+$border-color: $theme-color;
 
 .remove-bootstrap-outline {
   textarea:focus,
