--- a/clients/src/components/multi-choices/panelSettings/PanelSettings.scss
+++ b/clients/src/components/multi-choices/panelSettings/PanelSettings.scss
@@ -9,7 +9,7 @@ $question-attribute-setting-height: 80px;
     font-size: 0px;
 
     .panel-right-title {
-        background-color: goldenrod;
+        background-color: $theme-color;
         font-weight: bold;
         font-size: 16px;
         text-transform: uppercase;
@@ -149,7 +149,7 @@ $question-attribute-setting-height: 80px;
     .examinee-actions {
 
         .time-remain {
-            background-color: burlywood;
+            background-color: $theme-color;
             margin: $gap 0;
 
             .time-remain-show {
