--- a/clients/src/components/multi-choices/questionItemPreview/QuestionItemPreview.scss
+++ b/clients/src/components/multi-choices/questionItemPreview/QuestionItemPreview.scss
@@ -10,7 +10,7 @@ $question-item-preview-content-background: #F3F0D7;
     border-radius: $gap;
 
     .question-item-preview-number {
-        background-color: goldenrod;
+        background-color: lighten($theme-color, 10);
         color: white;
         font-weight: bold;
         cursor: move;
@@ -31,6 +31,8 @@ $question-item-preview-content-background: #F3F0D7;
     }
 
     .question-selected {
-        background-color: #FFBF86 !important;
+        background-color: #2ccf869c !important;
+        color: white;
+        font-weight: bold;
     }
 }
