1st login signup

--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -79,6 +79,9 @@ $app-bg-color: rgb(255, 255, 255);
   --z-tooltip: 10;
   --z-fixed: 100;  
 
+  //navbar height
+  --navbar-height: 100px;
+
 }
 
 ul {
